part of #49690 - do not instantiate new Boolean objects